--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,12 +3,20 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: npm install && npm run build
+  - init: npm install && npm run start
     command: npm run start
 ports:
-  - port: 8081
-    onOpen: open-browser
   - port: 3000
     onOpen: open-browser
+
+github:
+  prebuilds:
+    master: true
+    branches: true
+    pullRequests: true
+    pullRequestsFromForks: true
+    addCheck: false
+    addComment: false
+    addBadge: true
 
 
