--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: npm install && npm run start
+  - init: npm install && npm run build
     command: npm run start
 ports:
   - port: 3000
@@ -16,7 +16,7 @@ github:
     pullRequests: true
     pullRequestsFromForks: true
     addCheck: false
-    addComment: false
+    addComment: true
     addBadge: true
 
 
