--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,12 +2,8 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
-tasks:
-  - init: npm install && npm run build
-    command: npm run start
-ports:
-  - port: 3000
-    onOpen: open-browser
+image:
+  file: .gitpod.Dockerfile
 
 github:
   prebuilds:
